--- a/edmunds/widgets/glance/prototype/rating-tab.html
+++ b/edmunds/widgets/glance/prototype/rating-tab.html
@@ -126,10 +126,11 @@
     </footer>
 </div>
 
-<script src="../../../../bower_components/less/dist/less-1.7.0.js"></script>
+<script src="/less/dist/less-1.7.0.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="../../../../bower_components/jquery/dist/jquery.js"></script>
+<script src="/jquery/dist/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../../../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.js"></script>
+
 </body>
 </html>
