--- a/edmunds/widgets/glance/prototype/rating-tab.html
+++ b/edmunds/widgets/glance/prototype/rating-tab.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Rating tab</title>
+    <link rel="stylesheet/less" type="text/css" href="/libs/bootstrap/less/bootstrap.less">
     <link rel="stylesheet/less" type="text/css" href="less/base.less">
 </head>
 <body>
