Fixed URLs to the base.less file.

--- a/edmunds/widgets/glance/prototype/rating-tab.html
+++ b/edmunds/widgets/glance/prototype/rating-tab.html
@@ -3,7 +3,7 @@
 <head>
     <title>Rating tab</title>
     <link rel="stylesheet/less" type="text/css" href="/libs/bootstrap/less/bootstrap.less">
-    <link rel="stylesheet/less" type="text/css" href="/glance/prototype/less/base.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/base.less">
 </head>
 <body>
 
