Fixed URLs to the base.less file.

--- a/edmunds/widgets/glance/prototype/rating-tab.html
+++ b/edmunds/widgets/glance/prototype/rating-tab.html
@@ -3,6 +3,14 @@
 <head>
     <title>Rating tab</title>
     <link rel="stylesheet/less" type="text/css" href="/libs/bootstrap/less/bootstrap.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/modules/variables.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/modules/mixins.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/partials/letter-grades.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/partials/rating-selectors.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/header.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/content.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/footer.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/less/rating-bar.less">
     <link rel="stylesheet/less" type="text/css" href="../prototype/less/base.less">
 </head>
 <body>
