--- a/edmunds/widgets/glance/prototype/rating-tab.html
+++ b/edmunds/widgets/glance/prototype/rating-tab.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Rating tab</title>
-    <link rel="stylesheet/less" type="text/css" href="../prototype/less/base.css">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/base.css">
 </head>
 <body>
 
