Added rating-tab-2 page and edmunds-says page

--- a/edmunds/widgets/glance/prototype/rating-tab-2.html
+++ b/edmunds/widgets/glance/prototype/rating-tab-2.html
@@ -73,51 +73,26 @@
         </div>
     </div>
     <section class="content row">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="rating-selector clearfix">
-                <div class="letter-grade small excellent">a</div>
-                <div class="category">Comfort</div>
-                <div class="arrow-right"></div>
-                <div class="text-grade">Excellent</div>
-            </div>
+        <div class="rating-title clearfix">
+            <div class="letter-grade small excellent">a</div>
+            <div class="category">Comfort</div>
+            <div class="text-grade">Excellent</div>
+            <div class="close-button"></div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="rating-selector clearfix">
-                <div class="letter-grade small good">b</div>
-                <div class="category">Performance</div>
-                <div class="arrow-right"></div>
-                <div class="text-grade">Good</div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="rating-selector clearfix">
-                <div class="letter-grade small fair">c</div>
-                <div class="category">Value</div>
-                <div class="arrow-right"></div>
-                <div class="text-grade">Fair</div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="rating-selector clearfix">
-                <div class="letter-grade small poor">d</div>
-                <div class="category">Comfort</div>
-                <div class="arrow-right"></div>
-                <div class="text-grade">Poor</div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="rating-selector clearfix">
-                <div class="letter-grade small bad">e</div>
-                <div class="category">Performance</div>
-                <div class="arrow-right"></div>
-                <div class="text-grade">Bad</div>
-            </div>
+        <hr>
+        <p class="description">It's when you begin to look at what else is available for around 026K that the ILX really shines. Its
+            generous standard equipment and competitive fuel economy (not to mention good looks) should give it some
+            traction in the market.</p>
+        <div class="edmunds-rating-strips">
+            <p>A<span class="strip"></span>Build Quality (vs. $)</p>
+            <p>A<span class="strip"></span>Features (vs. $)</p>
+            <p>A<span class="strip"></span>Cost</p>
+            <p>A<span class="strip"></span>MPG</p>
+            <p>B<span class="strip good"></span>Warranty</p>
+            <p>B<span class="strip good"></span>Ownership</p>
         </div>
         <div class="col-xs-12">
-            <div class="rating-summary">
-                <h4>Rating summary</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum earum eius ex inventore non sit velit. Accusamus amet ea excepturi explicabo id minus, nobis numquam odio qui, quibusdam soluta suscipit!</p>
-            </div>
+            <a href="#" class="btn btn-primary">Read full review <span class="hidden-xs">on Edmunds.com</span></a>
         </div>
     </section>
     <footer class="row">
