--- a/edmunds/widgets/glance/prototype/photos.html
+++ b/edmunds/widgets/glance/prototype/photos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Photos</title>
-    <link rel="stylesheet/less" type="text/css" href="../prototype/base.less">
+    <link rel="stylesheet/less" type="text/css" href="../prototype/base.css">
 </head>
 <body>
 
