Update version of the rating tab.

--- a/edmunds/widgets/glance/app/index.html
+++ b/edmunds/widgets/glance/app/index.html
@@ -7,11 +7,21 @@
     <style>
         .edm-widget{
             min-height: 550px;
+            position: relative;
         }
         .dropdown-menu > li > a{
             overflow: hidden;
             -ms-text-overflow: ellipsis;
             text-overflow: ellipsis;
+        }
+        .edm-widget p{
+            padding-right: 5px;
+        }
+        footer{
+            height: 40px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
